syntax = "proto3";

package api.user;

option java_package = "ch.chaosconnect.api.user";
option java_multiple_files = true;

enum PlayerType {
  TEMPORARY = 0;
  REGULAR = 1;
}

message GetUserRequest {
  string username = 1;
  string password = 2;
}

message AddUserRequest {
  string username = 1;
  string password = 2;
  string display_name = 3;
}

message AddTemporaryUserRequest {
  string display_name = 1;
}

message UpdateUserRequest {
  oneof changed_property {
    string display_name = 1;
    string password = 2;
  }
}

message UserTokenContent {
  string identifier = 1;
  PlayerType player_type = 2;
}

message UserAuthResponse {
  oneof response {
    UserTokenContent token = 1;
    string failure_reason = 2;
  }
}
