syntax = "proto3";

option java_multiple_files = true;
option java_package = "ch.chaosconnect";
option java_outer_classname = "Rohan";
option objc_class_prefix = "HLW";

package ch.chaosconnect;

service RohanService {
  rpc send (RohanRequest) returns (RohanReply) {}
}

message RohanRequest {
  string name = 1;
}

message RohanReply {
  string message = 1;
}